--- a/themes/gabsc2019/layout/_partial/nav.ejs
+++ b/themes/gabsc2019/layout/_partial/nav.ejs
@@ -17,35 +17,22 @@
         <div id="navbarBasicExample" class="navbar-menu">
           <div class="navbar-start">
       
-            <a class="navbar-item">
+            <a class="navbar-item" href="/schedule">
               Schedule
             </a>
 
-            <a class="navbar-item">
+            <a class="navbar-item" href="/entertainment">
+              Entertainment
+            </a>
+
+            <a class="navbar-item" href="/map">
                 Map
             </a>
+
+            <a class="navbar-item" href="/parking">
+              Parking
+            </a>
       
-            <div class="navbar-item has-dropdown is-hoverable">
-              <a class="navbar-link">
-                More
-              </a>
-      
-              <div class="navbar-dropdown">
-                <a class="navbar-item">
-                  About
-                </a>
-                <a class="navbar-item">
-                  Jobs
-                </a>
-                <a class="navbar-item">
-                  Contact
-                </a>
-                <hr class="navbar-divider">
-                <a class="navbar-item">
-                  Report an issue
-                </a>
-              </div>
-            </div>
           </div>
       
         </div>
